Nearly finished commit. Finished adding highscore functions updated css to make the page look nice. updated readme.

--- a/game.html
+++ b/game.html
@@ -39,13 +39,19 @@
         </div>
     </div>
     <div class="container hide" id="hs-container">
-        <div class="end" id="flex-center flex-column">
-            <h1 id="final-score"></h1>
-            <p>THIS IS TEST</p>
+        <div class="flex-center flex-column" id="end">
+            <div class="flex-center flex column" id="highscores">
+                <h1>Score:</h1>
+                <h1 id="final-score">Highscores</h1>
+                <h1>Highscores:</h1>
+            <ul id="high-scores-list"></ul>
+            <a class="btn" href="index.html">Go Home</a>
             <form>
                 <input type="text" name="initials" id="initials" placeholder="initials"/>
                 <button type="submit" class="btn" id="saveScoreBtn" >Save</button>
             </form>
+            </div>
+            
         </div>
     </div>
 </body>
